# Pothole-Reporting-Robot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  run_pothole_detector.sh  run_pothole_detector_bash.sh  run_workspace.sh  run_workspace_bash.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
log/: latest_build
maps/: simple_map.yaml
params/: nav2_params.yaml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/custom_interfaces/share/custom_interfaces/: package.sh
ros2_ws/install/my_robot_controller/lib/my_robot_controller/: simple_pothole_detecotor  simple_pothole_detector  test_node
ros2_ws/log/: latest_build
ros2_ws/src/: README.md  colourDetection.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt
ros2_ws/src/custom_interfaces/msg/: PotholeData.msg
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/launch/: pothole_detection_demo.launch.py  simulator.launch.py
ros2_ws/src/my_robot_controller/: package.xml  setup.py
ros2_ws/src/my_robot_controller/my_robot_controller/: controller_utils.py  follow_waypoint.py  pdf_test.py  pothole_mapper.py  pothole_reporter.py  pothole_reporter_node.py  real_pothole_detector.py  simple_pothole_detector.py
ros2_ws/src/my_robot_controller/resource/: default_gzclient_camera(1)-2024-01-10T21_07_47.505376.xcf
rviz_config/: limo_navigation.rviz
saved_maps/: simple_map.pgm
worlds/: potholes_simple_2.world
(+22 files in other folders)
